test/syc/good/iftruth.c
/*
 * If statement with truth value argument.
 */

int d;

char x;
char y;

/* If statement with truth value argument. */
void if_truth(void)
{
	if (x < y)
		d = 1;
	else
		d = 0;
}
